[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "FastAPI app integrating PayPing and Nobitex"
authors = ["Sepehr Masihpour"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.30.0"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
pydantic = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
